<resources>
    <string name="app_name">To-Do List</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="notes_count">Notes count :</string>
    <string name="notes_done_count">Notes done :</string>
    <string name="priority">Priority</string>
    <string name="sharing_text_title">Title :&#160;</string>
    <string name="sharing_text_task">Task :&#160;</string>
    <string name="sharing_chooser_title">Send to…</string>
    <string name="back_pressed_text">Please click BACK again to exit</string>
    <string name="searchview_hint">Search</string>
    <string name="toast_text_task_is_empty">Task is empty</string>
    <string name="choose_action_for_selected_items">Choose action for selected items</string>
    <string name="title_hint">Title</string>
    <string name="task_hint">Task</string>
    <string name="date_hint">Date</string>
    <string name="low_priority_text">Low</string>
    <string name="medium_priority_text">Medium</string>
    <string name="high_priority_text">High</string>
    <string name="add_task_button_text">Add task</string>
    <string name="apply_task_button_text">Apply</string>
    <string name="do_not_remind_checkbox">Do not remind</string>
    <string name="group_textview">Group :</string>
    <string name="navigation_all">All</string>
    <string name="navigation_general">General</string>
    <string name="navigation_personal">Personal</string>
    <string name="navigation_work">Work</string>
    <string name="navigation_other">Other</string>
    <string name="choose_group_of_tasks">Choose group of tasks</string>
    <string name="nav_settings">Settings</string>
    <string name="show_done_tasks">Show done tasks</string>
    <string name="delete_all_done_tasks">Delete all done tasks</string>
    <string name="toolbar_settings">Settings</string>
    <string-array name="array_languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>
</resources>
