<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single"
        android:id="@+id/drawerGroup1">
        <item
            android:id="@+id/nav_all"
            android:icon="@drawable/ic_all_white"
            android:title="@string/navigation_all" />
        <item
            android:id="@+id/nav_general"
            android:icon="@drawable/ic_general_white"
            android:title="@string/navigation_general" />
        <item
            android:id="@+id/nav_personal"
            android:icon="@drawable/ic_personal_white"
            android:title="@string/navigation_personal" />
        <item
            android:id="@+id/nav_work"
            android:icon="@drawable/ic_work_white"
            android:title="@string/navigation_work" />
        <item
            android:id="@+id/nav_other"
            android:icon="@drawable/ic_other_white"
            android:title="@string/navigation_other" />
    </group>
    <group
        android:id="@+id/drawerGroup2">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white"
            android:title="@string/nav_settings"/>
    </group>
    <!--<item android:title="Settings">
        <menu>
            <item android:id="@+id/nav_item_showDone"
                android:title="Show"/>
            <item android:id="@+id/nav_item_deleteDone"
                android:title="Delete"/>
        </menu>
    </item>-->
</menu>